# trabalho-02-pedro_gabriel

./: .gitignore  README.md  grammar.md
relatorio/: Makefile  README.md  implementacao.tex  main.tex  prompts.tex  relatorio.tex
relatorio/sections/: Conclusão.tex  intro.tex
relatorio/sections/Arquitetura/: AnaliseLéxica.tex  Arvore de sintaxe abstrata.tex  Gramatica.tex
relatorio/sections/Metodologia/: Estrutura sintática.tex  Inferência de tipos.tex  Semantica.tex  Sistemas de tipos.tex
relatorio/sections/Testes/: Insturuções.tex  Limitações.tex  Testes Realizados.tex
workspace/: README.md  sl_lang.cabal
workspace/app/: Main.hs
workspace/src/: Interpreter.hs
workspace/src/Frontend/: Syntax.hs
workspace/src/Frontend/Lexer/: SL.hs  SL.x  Token.hs
workspace/src/Frontend/Parser/: SL.hs  SL.info  SL.y  Syntax.hs
workspace/src/Frontend/Semantics/: Basics.hs  ExpTC.hs  ExprTC.hs  SmtTC.hs  StmtTC.hs
workspace/src/Utils/: Pretty.hs  Tree.hs
workspace/test/: Lexer.hs  Main.hs  Parser.hs  Semantic.hs
workspace/test/Ed1/: HashTable.sl
workspace/test/Force-errors/: ArityMismatch(less).sl  ArityMismatch(more).sl  DuplicateDeclVar.sl  NotAStruct.sl  NotAnArray.sl  NotAssignable.sl  UndefinedField.sl
workspace/test/Force_bounds/: t2.sl
workspace/test/Samples/: ex1.sl  ex2.sl  ex4.sl  ex6.sl
workspace/test/Samples/Assignment/: ex4.sl  ex5.sl
workspace/test/Samples/Ed1/: BinaryTree.sl  BubbleSort.sl  ChainList.sl  Queue.sl  QuickSort.sl  Stack.sl
workspace/test/Samples/Force-errors/: ArityMismatch(less).sl  MissingReturn.sl  NotAStruct.sl  NotCallable.sl  ReturnTypeMismatch.sl  UndefinedField.sl  UndefinedFunction.sl  UndefinedStruct.sl  UndefinedVariable.sl
workspace/test/Samples/Force_bounds/: t1.sl  t2.sl  t3.sl  t4.sl  t5.sl  t6.sl
